--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 }
 
 dependencies {
+    compile 'com.google.code.gson:gson:2.2.+'
     compile("org.springframework.boot:spring-boot-starter-websocket:1.3.2.RELEASE")
     compile("org.springframework:spring-messaging:1.3.2.RELEASE")
     testCompile group: 'junit', name: 'junit', version: '4.11'
